# ucl

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yaml
cmake/: avr-gcc.cmake  config.h.in
docs/: README.md
docs/ddd/: README.md  block.drawio  power.drawio  ucl-block.drawio
docs/dev/vscode/: c_cpp_properties.json
hardware/: README.md  eagle.epf  ucl.b#1  ucl.b#2  ucl.b#3  ucl.b#4  ucl.brd  ucl.s#1  ucl.s#2  ucl.sch
include/: cbuf.h  configuration.h  eeprom.h  encoder.h  i2c.h  logger.h  pwm.h  tests.h  usart.h
sim/: README.md  power_mux.asc
src/: cbuf.c  eeprom.c  i2c.c  logger.c  main.c  main.cpp  pwm.c  tests.c  usart.c  usart.h
src/drivers/: README.md  eeprom.c  encoder.c  i2c.c  pwm.c  usart.c
tools/: atmega2560.cfg
